--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,19 @@
 [package]
-name = "fuzzing_test"
+name = "CURE"
 version = "0.1.0"
-edition = "2023"
+edition = "2021"
 authors = ["RP-Cure"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rpki-testing = {git = "https://github.com/rp-cure/CURE-PP.git"}
-bytes		= {version = "1.1.0"}
+#rpki-testing = {git = "https://github.com/rp-cure/CURE-PP.git"}
+bytes		= {version = "1.4.0"}
 #webs = {path = "../webs/"}
 base64 = "0.20.0"
 clap = "4.0.32"
 #rpki		= {version = "0.14.1", features=["repository", "softkeys", "xml", "rrdp", "serde"]} 
-rpki = {path="/home/nvogel/Schreibtisch/stuff/rpki-rs/", features=["repository", "softkeys", "xml", "rrdp", "serde"]}
-openssl = "0.10.30"
+rpki = {path="./rpki-rs-custom/rpki-rs/", features=["repository", "softkeys", "xml", "rrdp", "serde"]}
+openssl = "0.10.55"
 rand = "0.8.5"
 serde = { version = "1.0.*", default-features = false }
 serde_json="1.0"
@@ -27,6 +27,11 @@ strsim = "0.10.0"
 ipnet = { version = "2", features = ["serde"] }
 rasn = "0.7.0"
 sha256 = "1.1.3"
+csv = "1.2.2"
+walkdir = "2.3.3"
+dirs =          {version = "1.0.4"}
+oid = "0.2.1"
+ring = "0.16.20"
 
 [features]
 roa_fuzz = []
